--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,10 @@
             <h1>{{ msg }}</h1>
         {% endfor %}
     {% else %}
+    <ul>
+        <li><a onclick="javascript:$.SSO.user.login();void(0)">登录</a></li>
+        <li><a onclick="javascript:$.SSO.user.new();void(0)">注册</a></li>
+    </ul>
     <script>
         CONST.SSO = {
             ID: {{ g.app_id  }},
